force-app/main/default/objects/Parent_Child_Mapping__c/Parent_Child_Mapping__c.object-meta.xml
<CustomObject>
    <label>Parent Child Mapping</label>
    <nameField>
        <displayFormat>PCM-{0000}</displayFormat>
        <label>Parent Child Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parent Child Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>