force-app/main/default/objects/Parent_Child_Mapping__c/fields/Child_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Field_Name__c</fullName>
    <label>Child Field Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>