force-app/main/default/objects/Parent_Child_Mapping__c/fields/Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Child_Object__c</fullName>
    <label>Child Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Object_Names</valueSetName>
    </valueSet>
</CustomField>