force-app/main/default/objects/Parent_Child_Mapping__c/fields/Parent_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Field_Name__c</fullName>
    <label>Parent Field Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>