force-app/main/default/objects/Parent_Child_Mapping__c/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <label>Parent Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Object_Names</valueSetName>
    </valueSet>
</CustomField>