force-app/main/default/objects/Parent_Child_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Parent_Object__c</columns>
    <columns>Parent_Field_Name__c</columns>
    <columns>Child_Object__c</columns>
    <columns>Child_Field_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>